--- a/docs/style/index.css
+++ b/docs/style/index.css
@@ -40,12 +40,38 @@ under the MIT License. You may find its copy here:
 
 */
 
+.loader_text {
+  padding-top: 8px;
+}
+
+.loader_container {
+  transform: translate(-50px, -50px);
+  padding: 8px;
+  border-radius: 12px;
+  background: white;
+  -webkit-box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.75);
+
+  position: fixed;
+  left: 50vw;
+  top: 45vh;
+
+  width: 150px;
+  text-align: center;
+
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .loader {
+  position: relative;
+  left: 10px;
+  top: 0;
   border: 16px solid #f3f3f3; /* Light grey */
   border-top: 16px solid #3498db; /* Blue */
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
+  width: 100px;
+  height: 100px;
   animation: spin 2s linear infinite;
 }
 
