--- a/docs/setup/style/main.css
+++ b/docs/setup/style/main.css
@@ -1,5 +1,5 @@
 /*
-/docs/style/index.css
+/docs/setup/style/main.css
 
 All files in this repository are distributed under the GNU GPLv3 License. You
 may get yourself a copy of the license at the link below:
@@ -40,73 +40,15 @@ under the MIT License. You may find its copy here:
 
 */
 
-body {
-  margin: 0;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.loader_text {
-  padding-top: 8px;
-  color: #8523c2;
-}
-
-.loader_container {
-  transform: translate(-50px, -50px);
-  padding: 8px;
-  border-radius: 12px;
-  background: white;
-  -webkit-box-shadow: 0px 0px 60px 0px rgba(255,255,255,0.8);
-  -moz-box-shadow: 0px 0px 60px 0px rgba(255,255,255,0.8);
-  box-shadow: 0px 0px 60px 0px rgba(255,255,255,0.8);
-
-  position: fixed;
-  left: 50vw;
-  top: 45vh;
-
-  width: 150px;
-  text-align: center;
-
-  font-family: Arial, Helvetica, sans-serif;
-
-  -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome and Opera */
-}
-
-.loader {
-  position: relative;
-  left: 10px;
-  top: 0;
-  border: 16px solid rgba(133, 35, 194, 0.4); /* Light grey */
-  border-top: 16px solid #8523c2; /* Purple */
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
-  animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-.loader_back {
+.center {
   position: fixed;
   left: 0;
   top: 0;
+  line-height: 100vh;
+  vertical-align: middle;
   width: 100%;
-  height: 100%;
+  text-align: center;
+  z-index: -1;
 
-  background: rgba(133, 35, 194, 0.3);
-}
-
-.topper {
-  background: #8523c2;
-  padding: 16px;
-  font-size: 25px;
-  color: white;
+  font-size: 18px;
 }
