--- a/docs/setup/style/main.css
+++ b/docs/setup/style/main.css
@@ -52,3 +52,29 @@ under the MIT License. You may find its copy here:
 
   font-size: 18px;
 }
+
+.left {
+  position: fixed;
+  left: 0;
+  top: 0;
+  line-height: 100vh;
+  vertical-align: middle;
+  z-index: -2;
+
+  font-size: 50px;
+  color: gray;
+  margin-left: 16px;
+}
+
+.right {
+  position: fixed;
+  right: 0;
+  top: 0;
+  line-height: 100vh;
+  vertical-align: middle;
+  z-index: -3;
+
+  font-size: 50px;
+  color: gray;
+  margin-right: 16px;
+}
